<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activity.DetailActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/dimens_padding_16"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Widget.AppCompat.PopupMenu.Overflow">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/btn_detail_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_round_arrow_back_ios_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="OnClick" />


                <ImageButton
                    android:id="@+id/btn_detail_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimens_padding_48"
                    android:backgroundTint="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_detail_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimens_padding_16"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_favorite_border"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dimens_padding_16"
            android:layout_marginLeft="@dimen/dimens_padding_16"
            android:layout_marginRight="@dimen/dimens_padding_16"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_detail_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/dimens_padding_32"
            android:layout_marginLeft="@dimen/dimens_padding_16"
            android:layout_marginRight="@dimen/dimens_padding_16"
            android:text="@string/publishedat"/>

        <ImageView
            android:id="@+id/img_detail_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/tv_detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:layout_marginLeft="@dimen/dimens_padding_16"
            android:layout_marginRight="@dimen/dimens_padding_16"
            android:textColor="@android:color/black"
            android:textStyle="normal"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.core.widget.NestedScrollView>